--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
-html {
+* {
     background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
@@ -8,11 +12,25 @@ h1 {
 }
 
 a {
-    color: #fff;
-    margin: 0 auto;
+    color: aquamarine;
+    
 }
 
 video {
-    display: flex;
-    justify-content: center;
+   
+   
+}
+
+h2 {
+    color: #fff;
+    text-align: center;
+}
+
+p {
+    color: #fff;
+    text-align: center;
+}
+
+img {
+  
 }
