final changes applied

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,6 @@
     background-color: #000;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     font-family: Verdana;
 }
@@ -19,10 +18,6 @@ a {
     font-size: 16px;
 }
 
-video {
-   
-   
-}
 
 h2 {
     color: #fff;
@@ -39,9 +34,6 @@ p {
 
 footer p {
     color: gray;
-    align-self: self-end;
+    text-align: right !important; 
 }
 
-img {
-  
-}
