--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,12 @@
-* {
+body {
     background-color: #000;
+    font-family: Verdana;
+}
+
+header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Verdana;
 }
 
 h1 {
@@ -18,6 +21,12 @@ a {
     font-size: 16px;
 }
 
+.video-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 h2 {
     color: #fff;
@@ -30,6 +39,19 @@ p {
     color: gray;
     text-align: center;
     font-size: 21px;
+}
+
+.image-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   
+}
+
+.last-section-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer p {
